# runstats

./: .editorconfig  .env.example  .gitignore  AGENT.md  README.md  package.json  runstats-design.md  runstats-product-backlog.md
backend/: README.md  alembic.ini  pyproject.toml
backend/runstats/: __init__.py  config.py  local_app.py  main.py  schemas.py
backend/runstats/api/: activities.py  chat.py  data_management.py  devices.py  errors.py  health.py  healthcheck.py  imports.py  settings.py  sync.py
backend/runstats/bluetooth/: __init__.py  bleak_provider.py  factory.py  fake.py  provider.py
backend/runstats/chat/: __init__.py  factory.py  fake.py  ollama.py  provider.py  tools.py
backend/runstats/db/: __init__.py  models.py  seed.py  session.py
backend/runstats/importers/: __init__.py  fit_activity.py  fit_folder.py  health_payload.py
backend/runstats/services/: __init__.py  activity_service.py  analytics_service.py  chat_service.py  data_management_service.py  device_service.py  health_import_service.py  health_service.py  import_service.py  (+4 more)
backend/tests/: e2e_server.py  fit_fixtures.py  test_app.py  test_config.py  test_database.py  test_migrations.py  test_models.py  test_package.py  test_phase10_data_management.py  test_phase2_api.py  test_phase2_services.py  test_phase4_api.py  test_phase4_services.py  test_phase5_bluetooth_provider.py  test_phase6_api.py  test_phase6_fit_parser.py  test_phase6_import_service.py  test_phase6_sync_imports.py  test_phase7_health_import.py  test_phase8_chat.py  test_phase9_sync_reliability.py  test_seed.py
(+39 files in other folders)
